--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,134 @@
 <head>
     <title>Resume</title>
     <meta charset="UTF-8">
-    <meta name ="description" content ="Introduction">
+    <meta name ="description" content ="Resume">
     <meta name ="keywords" content ="HTML">
     <meta name ="author" content="Palakdeep Mundi">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styleIndex.css"/>
+    <nav>
+        <ul class="navigation">
+            <li><a  href="index.html"> &lt; &lt; Introduction</a></li>
+            <li><a  href="resume.html"> &lt; &lt; Resume</a></li>
+        </ul>
+    </nav>
 </head>
 
 <body>
+    <header class="title-banner">
+        <h1>Resume</h1>
+    </header>
 
+    <main class="content">
+        <article class="skills" > 
+                <h2 id="skillss">SKILLS:</h2>
+                <ul>
+                    <li>
+                        Communication: Confident in initiating conversations with strangers and articulating ideas or plans with a group developed through experience in the service sector. Fluent in three different languages(English, Punjabi, Hindi) and a beginner in French.
+                    </li>
+                    <li>
+                        Critical thinker: Analyzed and addressed client issues by engaging in dialogue to understand the root cause of the problem.
+                    </li>
+                    <li>
+                        Coding languages: Used Python and Java for creating different projects such as a map, calculator, pizza delivery notification app(for a school assignment).
+                    </li>
+                    <li>
+                        Website Development: Using HTML, and CSS for creating a journal website, that allows users to learn how to maintain a journal and ideas to write in a journal.
+                    </li>
+                    <li>
+                        Problem- solving: Ability to analyze problems and give effective solutions using coding and algorithm techniques.
+                    </li>
+                    <li>
+                        Documentation: Write clear and concise documentation for codes.
+                    </li>
+                </ul>
+        </article>
+
+        <div>
+            <article class="education">
+                <h2 id="educations">EDUCATION:</h2>
+                <h4> Bachelors of Computer Information Systems
+                    <br/>
+                    Mount Royal University
+                </h4>
+                <p>
+                    <ul>
+                        <li>
+                            Learned how to write effective algorithms or documentation for codes. 
+                        </li>
+
+                        <li>
+                            Learned how to effectively work in group projects.
+                        </li>
+
+                        <li>
+                            Learned different computer programming languages. 
+                        </li>
+                    </ul>
+                </p>
+            </article>
+        </div>
+
+        <div class="work">
+            <article>
+                <h2 id="works">WORK EXPERIENCE</h2>
+                <h4>Store Associate
+                    <br/>
+                    JD Sports, Calgary
+                </h4>
+                <p>
+                    Managed back-of-house operations by organizing and shifting shoes, handling shipments, and maintaining the overall organization of clothing inventory.
+                    <br/>
+                    Assisted in fulfilling e-commerce orders, ensuring accurate and timely delivery to customers.
+                    <br/>
+                    Provided personalized customer service by assisting shoppers in determining the most suitable size and
+                    footwear options to meet their needs
+                </p>
+                <h4>Store Associate 
+                    <br/>
+                    The Children’s Place, Calgary 
+                </h4>   
+                <p>                                        
+                    Greeting customers and providing best customer service as well as maintaining a pleasant store appearance.
+                    <br/>
+                    Operating the cash register and other means of payment.
+                    <br/>
+                    Responsible for store closing routines including store closing duties.
+                    <br/>
+                    Resolved customer’s issues professionally and in a timely manner.
+                    <br/>
+                    Maintained a non-defensive, professional and friendly working environment.
+                    <br/>
+                    Setting the visual and floor set. Developed innovative and creative merchandise displays to drive point-of-sale purchases.
+                    <br/>Training new associates to decrease process lags and boost productivity.
+                </p>
+            </article>
+        </div>
+
+        <div>
+            <article class="volunteer">
+                <h2 id="Volunteering">VOLUNTEER WORK:</h2>
+                <h4>Dashmesh Culture Centre, Calgary </h4>
+                <p>
+                    Teaching Punjabi language to kids.
+                </p>
+            </article>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <li><a id="skills" href="#skills" type="button"> SKILLS</a></li>
+        <br/>
+        <li><a id="education" href="#education" type="button"> EDUCATION</a></li>
+        <br/>
+        <li><a id="WorkExperience" href="#workexperience" type="button"> WORK EXPERIENCE</a></li>
+        <li><a id="Volunteering" href="#volunteering" type="button"> VOLUNTEER WORK</a></li>
+        <br/>
+        <audio controls>
+            <source src="Recording 3.mp3" type="audio/mpeg"/>
+        </audio>
+        <br/>
+        &copy;All rights reserved.
+    </footer>
 </body>
+</html>
