--- a/resume.html
+++ b/resume.html
@@ -119,12 +119,12 @@
     </main>
 
     <footer class="footer">
-        <li><a id="skills" href="#skills" type="button"> SKILLS</a></li>
+        <li><a id="skills" href="#skillss" type="button"> SKILLS</a></li>
         <br/>
-        <li><a id="education" href="#education" type="button"> EDUCATION</a></li>
+        <li><a id="education" href="#educations" type="button"> EDUCATION</a></li>
         <br/>
-        <li><a id="WorkExperience" href="#workexperience" type="button"> WORK EXPERIENCE</a></li>
-        <li><a id="Volunteering" href="#volunteering" type="button"> VOLUNTEER WORK</a></li>
+        <li><a id="WorkExperience" href="#works" type="button"> WORK EXPERIENCE</a></li>
+        <li><a id="Volunteering" href="#Volunteering" type="button"> VOLUNTEER WORK</a></li>
         <br/>
         <audio controls>
             <source src="Recording 3.mp3" type="audio/mpeg"/>
