--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </ul>
     </nav>
 
-    <main class="content">
+    <main>
         <div>
-            <article>
-                <p style="float: left;">
+            <article class="article">
+                <p>
                     <h1> Hi. I'm Palak.</h1>
                     I am a current student of Bachelor's of Computer Information Systems.
                     Who can help you understand what are the do's and don'ts to get a job.
@@ -33,17 +33,14 @@
                 </p>
             </article>
         </div>
-        <!--
-            learn how to put so much space between links on the top head.
-            learn how to grid my introduction on the left side
-        -->
+        
     </main>
 
     <footer class="footer-index">
-        <li><a id="skills" href="resume.html#skills" type="button"> SKILLS</a></li>
-        <li><a id="education" href="resume.html#education" type="button"> EDUCATION</a></li>
-        <li><a id="WorkExperience" href="resume.html#workexperience" type="button"> WORK EXPERIENCE</a></li>
-        <li><a id="Volunteering" href="resume.html#volunteering" type="button"> VOLUNTEER WORK</a></li>
+        <li><a id="skills" href="resume.html#skillss" type="button"> SKILLS</a></li>
+        <li><a id="education" href="resume.html#educations" type="button"> EDUCATION</a></li>
+        <li><a id="WorkExperience" href="resume.html#works" type="button"> WORK EXPERIENCE</a></li>
+        <li><a id="Volunteering" href="resume.html#Volunteering" type="button"> VOLUNTEER WORK</a></li>
     </footer>
 </body>
 </html>
